--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@eslint/js": "^9.39.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -37,7 +38,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "jsdom": "^27.2.0",
+    "jsdom": "^24.1.0",
     "typescript": "^5.0.2",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.2.6",
