--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             set -e
+            git config --global --add safe.directory /home/daisuke/food-manager-v2/frontend
             cd /home/daisuke/food-manager-v2/frontend
             git pull origin main
             cd /home/daisuke/food-manager-v2
