fix: use git reset instead of pull for deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,8 @@ jobs:
             set -e
             git config --global --add safe.directory /home/daisuke/food-manager-v2/frontend
             cd /home/daisuke/food-manager-v2/frontend
-            git pull origin main
+            git fetch origin main
+            git reset --hard origin/main
             cd /home/daisuke/food-manager-v2
             docker compose up -d --build
           EOF
